--- a/Sign_Out.css
+++ b/Sign_Out.css
@@ -164,15 +164,10 @@ form{
 
 
 
-
-/* Footer */
-footer {
-    text-align: center;
-    margin-top: 20px;
-    padding: 10px;
-    background: #0dfde9;
-    color: white;
-    border-radius: 5px;
+.content_container{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 
 
@@ -339,9 +334,17 @@ h1 {
 
 .button button{
     margin-left: 1.5rem;
+    border: none;
     padding: 1rem 5rem;
     border-radius: 1em;
     background: rgb(231, 138, 31);
+}
+
+.button button:hover{
+    border: orange solid 2px;
+    background: transparent;
+    color: orange;
+    transition: 1s ease;
 }
 
 @media (min-width : 320px) and  (max-width: 1024px){
