--- a/Sign_In.css
+++ b/Sign_In.css
@@ -192,14 +192,10 @@ header{
 
 
 
-/* Footer */
-footer {
-    text-align: center;
-    margin-top: 20px;
-    padding: 10px;
-    background: #0dfde9;
-    color: white;
-    border-radius: 5px;
+.content_container{
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
 }
 
 
@@ -293,6 +289,12 @@ color: white;
         width: 300px;
         height: 600px;
     }
+    .Message a{
+        font-size: 13px;
+    }
+    .Message p{
+        font-size: 13px;
+    }
 }
 
 
@@ -364,9 +366,17 @@ color: white;
 
 .button button{
     margin-left: 1.5rem;
+    border: none;
     padding: 1rem 5rem;
     border-radius: 1em;
     background: rgb(231, 138, 31);
+}
+
+.button button:hover{
+    border: orange solid 2px;
+    background: transparent;
+    color: orange;
+    transition: 1s ease;
 }
 
 @media (min-width : 320px) and  (max-width: 1024px){
