--- a/help.css
+++ b/help.css
@@ -411,6 +411,7 @@ nav a:hover{
 
     .help_container_2 p{
     padding: 0;
+    font-size: 13px;
 }
 
     .help_container_1{
@@ -457,6 +458,7 @@ nav a:hover{
 
     .help_container_4 p{
     padding: 0;
+    font-size: 13px;
 }
 
     .help_container_3{
@@ -502,6 +504,7 @@ nav a:hover{
 
     .help_container_6 p{
     padding: 0;
+    font-size: 13px;
 }
 
     .help_container_5{
@@ -547,6 +550,7 @@ nav a:hover{
 
     .help_container_8 p{
     padding: 0;
+    font-size: 13px;
 }
 
     .help_container_7{
@@ -592,6 +596,7 @@ nav a:hover{
 
     .help_container_10 p{
     padding: 0;
+    font-size: 13px;
 }
 
     .help_container_9{
