--- a/account_setting.css
+++ b/account_setting.css
@@ -75,7 +75,7 @@
 .header_dashboard{
     width: 100%;
     height: 100px;
-    background: #979595;
+    background: linear-gradient( rgba(0,30,90,0.95) ,rgba(0,30,90,0.6));
     display: flex;
     align-items: center;
     padding: 2rem;
@@ -140,7 +140,7 @@
     width: 100%;
     height: fit-content;
     text-align: center;
-    background: #535353;
+    background: linear-gradient( rgba(0,30,90,0.95) ,rgba(0,30,90,0.6));
 }
 .Copyright p{
     font-size: 1rem;
