--- a/confirm_payment.css
+++ b/confirm_payment.css
@@ -98,7 +98,7 @@
 .header_dashboard{
     width: 100%;
     height: 100px;
-    background: #979595;
+    background: linear-gradient( rgba(0,30,90,0.95) ,rgba(0,30,90,0.6));
     display: flex;
     align-items: center;
     padding: 2rem;
