--- a/dashboard.css
+++ b/dashboard.css
@@ -16,7 +16,7 @@
 .header_dashboard{
     width: 100%;
     height: 100px;
-    background: #979595;
+      background: linear-gradient( rgba(0,30,90,0.95) ,rgba(0,30,90,0.6));
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -297,7 +297,8 @@
     width: 100%;
     height: fit-content;
     text-align: center;
-    background: #535353;
+    background: linear-gradient( rgba(0,30,90,0.95) ,rgba(0,30,90,0.6));
+
 }
 .Copyright p{
     font-size: 1rem;
