--- a/index.css
+++ b/index.css
@@ -393,6 +393,45 @@ nav a:hover{
 
 
 
+.hero-section  {
+      position: relative;
+      width: 100%;
+      height: 90vh;
+      overflow: hidden;
+    }
+
+
+  .hero-slidee {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .hero-slidee.active {
+      opacity: 1;
+    }
+
+    .hero-text {
+      position: absolute;
+      bottom: 15%;
+      left: 15%;font-size: 20pc;
+      top: 9em;
+      color: white;
+      font-size: 3rem;
+      animation: slideUp 1s ease-out;
+    }
+
+    .hero-text p{
+        font-size: 30px;
+    }
+
+
+
+
 
 
 /* hero-container  */
